--- a/3.The Mode.ipynb
+++ b/3.The Mode.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We learned that the mean takes into account each value in the distribution, and we saw that it's fairly easy to define the mean algebraically. These two properties make the mean far superior to the median. The median comes in handy, however, when it's not possible or appropriate to compute the mean.\n",
+    "We learned that \n",
+    "* the mean takes into account each value in the distribution, and \n",
+    "* it's fairly easy to define the mean algebraically. \n",
+    "\n",
+    "These two properties make the mean far superior to the median. The median comes in handy, however, when it's not possible or appropriate to compute the mean.\n",
     "\n",
     "We'll explore a couple of cases where neither the mean nor the median are suitable for finding an average value, and we'll learn an alternative summary metric."
    ]
@@ -43,7 +47,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We found that the Land Slope variable is ordinal. 'Gtl' means gentle slope, 'Mod' means moderate slope, and 'Sev' stands for 'Severe slope'."
+    "We found that the Land Slope variable is ordinal. \n",
+    "* 'Gtl' means gentle slope, \n",
+    "* 'Mod' means moderate slope, and  \n",
+    "* 'Sev' stands for 'Severe slope'."
    ]
   },
   {
@@ -59,9 +66,9 @@
    "source": [
     "We learned previously that the median is a good workaround for ordinal data, but the values of this ordinal variable are not numbers. Can we still compute the median?\n",
     "\n",
-    "If we sort the values of the Land Slope variable, we can find that the middle two values are ['Gtl', 'Gtl'] (the variable has an even number of values). Although we can't take their mean, it's intuitively clear that the average of two identical values is one of those values, so the median value should be 'Gtl'.\n",
+    "If we sort the values of the Land Slope variable, we can find that the middle two values are `['Gtl', 'Gtl']` (the variable has an even number of values). Although we can't take their mean, it's intuitively clear that the average of two identical values is one of those values, so the median value should be 'Gtl'.\n",
     "\n",
-    "However, if the two middle values were ['Gtl', 'Mod'], then it wouldn't be clear at all what to choose for the median. In cases like this, one workaround for finding an average value is to measure the most frequent value in the distribution. For the Land Slope variable, we can see that the value 'Gtl' has the greatest frequency:"
+    "However, if the two middle values were `['Gtl', 'Mod']`, then it wouldn't be clear at all what to choose for the median. In cases like this, one workaround for finding an average value is to measure the most frequent value in the distribution. For the `Land Slope` variable, we can see that the value `Gtl` has the greatest frequency:"
    ]
   },
   {
@@ -88,14 +95,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We call the most frequent value in the distribution the mode. So the mode of the Land Slope variable is 'Gtl'. In other words, the typical house has a gentle slope. Very importantly, notice that the mode is the most frequent value in the distribution, not the frequency of that value — so the mode is 'Gtl', not 2789."
+    "We call the most frequent value in the distribution **the mode**. \n",
+    "\n",
+    "So the mode of the `Land Slope` variable is `Gtl`. In other words, the typical house has a gentle slope. Very importantly, notice that the mode is the most frequent value in the distribution, not the frequency of that value — so the mode is `Gtl`, not `2789`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just like for the median, there's no standard notation for the mode. It's also worth noting that the mode is not defined algebraically."
+    "Just like for the **median**, there's no standard notation for the **mode**. \n",
+    "* It's also worth noting that the mode is not defined algebraically."
    ]
   },
   {
@@ -218,21 +228,24 @@
    "source": [
     "We obviously can't compute the mean for this variable because the values are words. Even if they were coded as numbers, it'd be completely wrong to compute the mean because in the case of nominal variables the numbers describe qualities, not quantities.\n",
     "\n",
-    "we made the case that we could compute the mean for ordinal variables if the values are numbers. This reasoning doesn't extend to nominal variables because they don't describe quantities, like ordinal variables do."
+    "We made the case that we could compute the mean for ordinal variables if the values are numbers. This reasoning doesn't extend to nominal variables because they don't describe quantities, like ordinal variables do."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because the Roof Style variable is nominal, there's also no inherent order of the values in the distribution. This means that we can't sort the values in an ascending or descending order. The first step in computing the median is to sort the values in ascending order, which means we can't compute the median for the Roof Style variable."
+    "Because the `Roof Style` variable is **nominal**, there's also no inherent order of the values in the distribution. This means that we can't sort the values in an ascending or descending order. \n",
+    "* The first step in computing the median is to sort the values in ascending order, which means we can't compute the median for the `Roof Style` variable."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are some cases where computing the mean and the median is possible and correct, but the mode is preferred nonetheless. This is sometimes the case for discrete variables (variables measured on interval or ratio scales can also be classified as discrete or continuous). A variable is discrete if there's no possible intermediate value between any two adjacent values."
+    "There are some cases where computing the **mean** and the **median** is possible and correct, but the **mode** is preferred nonetheless. \n",
+    "* This is sometimes the case for discrete variables (variables measured on interval or ratio scales can also be classified as discrete or continuous).\n",
+    "* A variable is discrete if there's no possible intermediate value between any two adjacent values."
    ]
   },
   {
@@ -260,46 +273,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we take the mean, we'd need to write that the typical house has 1.04 kitchens. This wouldn't make much sense for the regular reader, who expects the number of kitchens to be a whole number, not a decimal.\n",
+    "* If we take the **mean**, we'd need to write that the typical house has `1.04` kitchens. This wouldn't make much sense for the regular reader, who expects the number of kitchens to be a whole number, not a decimal.\n",
     "\n",
-    "The median is 1 — a value much easier to grasp by non-technical people compared to 1.04. But this is a lucky case because the middle two values in the sorted distribution could have been [1,2], and then the median would have been 1.5. The mode is a safer choice for cases like this because it guarantees a whole number from the distribution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The mode of the Kitchen AbvGr variable is 1. When we report this result, we should avoid technical jargon (like \"mode\" or \"variable\") and simply say that the typical house on the market has one kitchen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that the mode is also guaranteed to be a value from the distribution (this holds true for any kind of variable). This doesn't apply to the mean or the median, which can return values that are not present in the actual distribution. For instance, the mean of the Kitchen AbvGr is 1.04, but the value 1.04 is not present in the distribution.\n",
+    "* The median is `1` — a value much easier to grasp by non-technical people compared to `1.04`. But this is a lucky case because the middle two values in the sorted distribution could have been `[1,2]`, and then the median would have been `1.5`. \n",
     "\n",
-    "The mean and the median generally summarize the distribution of a discrete variable much better than the mode, and we should use the mode only if we need to communicate our results to a non-technical audience."
+    "* The mode is a safer choice for cases like this because it guarantees a whole number from the distribution."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are distributions that can have more than one mode. For this reason, we call this distribution bimodal (the prefix \"bi-\" means \"twice\"). If the distribution had only one mode, we'd call it unimodal (the prefix \"uni-\" means \"only one\").  When a distribution has more than two modes, we say that the distribution is multimodal (the prefix \"multi-\" means many)."
+    "The **mode** of the `Kitchen AbvGr` variable is `1`. \n",
+    "* When we report this result, we should avoid technical jargon (like \"mode\" or \"variable\") and simply say that the typical house on the market has one kitchen."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also have cases when there is no mode at all.Distributions without a mode are often specific to continuous variables. It's quite rare to find two identical values in a continuous distribution"
+    "Note that the mode is also guaranteed to be a value from the distribution (this holds true for any kind of variable). This doesn't apply to the mean or the median, which can return values that are not present in the actual distribution. \n",
+    "* For instance, the **mean** of the `Kitchen AbvGr` is `1.04`, but the value `1.04` is not present in the distribution.\n",
+    "\n",
+    "The **mean** and the **median** generally summarize the distribution of a discrete variable much better than the **mode**, and we should use the **mode** only if we need to communicate our results to a non-technical audience."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The workaround is to organize the continuous variable in a grouped frequency table, and select for the mode the midpoint of the class interval (the bin) with the highest frequency. This method has its limitations, but it generally gives reasonable answers. "
+    "There are distributions that **can have more than one mode**. For this reason, we call this distribution **bimodal (the prefix \"bi-\" means \"twice\")**. \n",
+    "\n",
+    "If the distribution had **only one mode**, we'd call it **unimodal (the prefix \"uni-\" means \"only one\")**.  \n",
+    "\n",
+    "When a distribution **has more than two modes**, we say that the distribution is **multimodal (the prefix \"multi-\" means many)**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also have cases when there is **no mode** at all.Distributions without a mode are often **specific to continuous variables**. \n",
+    "* It's quite rare to find two identical values in a continuous distribution\n",
+    "* The workaround is to organize the continuous variable in a grouped frequency table, and select for the mode the midpoint of the class interval (the bin) with the highest frequency. This method has its limitations, but it generally gives reasonable answers. "
    ]
   },
   {
@@ -421,14 +437,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The mode is lower than the median, and the median is lower than the mean. or The mean is greater than the median, and the median is greater than the mode"
+    "The **mode is lower than the median**, and **the median is lower than the mean**. or **The mean is greater than the median**, and the **median is greater than the mode**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we plot a histogram or a kernel density plot to visualize the shape of a distribution, the mode will always be the peak of the distribution"
+    "When we plot a **histogram or a kernel density plot** to visualize the shape of a distribution, the mode will always be the peak of the distribution"
    ]
   },
   {
@@ -515,11 +531,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The location of the mean, median, and mode are also predictable for symmetrical distributions(the shape of a distribution is symmetrical, then we can divide the distribution in two halves that are mirror images of one another). The median divides the distribution in two equal halves. As a consequence, the median will always be at the center of a perfectly symmetrical distribution because only a line drawn at the center can divide the distribution in two equal halves.\n",
-    "\n",
-    "For a perfectly symmetrical distribution, the two equal halves will bear the same weight when computing the mean because the mean takes into account equally each value in the distribution. The mean is not pulled neither to the left, nor to the right, and stays instead in the center, at the same location as the median. The mean and the median are always equal for any perfectly symmetrical distribution.\n",
-    "\n",
-    "Although the mean and the median have a constant location for every symmetrical distribution (no matter the shape), the location of the mode can change. The mode is where the peak is, so for a normal distribution the mode will be at the center, right where the mean and the median are."
+    "The location of the **mean, median, and mode** are also **predictable for symmetrical distributions(the shape of a distribution is symmetrical, then we can divide the distribution in two halves that are mirror images of one another)**. \n",
+    "* The median divides the distribution in two equal halves. As a consequence, the median will always be at the center of a perfectly symmetrical distribution because only a line drawn at the center can divide the distribution in two equal halves.\n",
+    "* For a perfectly symmetrical distribution, the two equal halves will bear the same weight when computing the mean because the mean takes into account equally each value in the distribution. The mean is not pulled neither to the left, nor to the right, and stays instead in the center, at the same location as the median. \n",
+    "* The mean and the median are always equal for any perfectly symmetrical distribution.\n",
+    "* Although the mean and the median have a constant location for every symmetrical distribution (no matter the shape), the location of the mode can change. \n",
+    "* The mode is where the peak is, so for a normal distribution the mode will be at the center, right where the mean and the median are."
    ]
   },
   {
@@ -574,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we learned that the mode is ideal for summarizing:\n",
+    "We learned that the mode is ideal for summarizing:\n",
     "\n",
     "* Ordinal data represented using words.\n",
     "* Nominal data.\n",
@@ -627,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
