--- a/Project Finding the Best Markets to Advertise In.ipynb
+++ b/Project Finding the Best Markets to Advertise In.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're working for an an e-learning company that offers courses on programming. Most of the courses are on web and mobile development, but also cover many other domains, like data science, game development, etc. They want to promote thier product and would like to invest some money in advertisement. Our goal in this project is to find out the two best markets to advertise our product in."
+    "We're working for an an e-learning company that offers courses on programming. \n",
+    "* Most of the courses are on web and mobile development, but also cover many other domains, like data science, game development, etc. \n",
+    "\n",
+    "They want to promote thier product and would like to invest some money in advertisement. Our goal in this project is to find out the two best markets to advertise our product in."
    ]
   },
   {
@@ -20,9 +23,11 @@
    "source": [
     "To avoid spending money on organizing a survey, we'll first try to make use of existing data to determine whether we can reach any reliable result.\n",
     "\n",
-    "One good candidate for our purpose is freeCodeCamp's 2017 [New Coder Survey](https://github.com/dataquestio/solutions/blob/master/Mission310Solutions.ipynb). [freeCodeCamp](https://www.freecodecamp.org/) is a free e-learning platform that offers courses on web development. Because they run a popular Medium publication (over 400,000 followers), their survey attracted new coders with varying interests (not only web development), which is ideal for the purpose of our analysis.\n",
+    "One good candidate for our purpose is freeCodeCamp's 2017 [New Coder Survey](https://github.com/dataquestio/solutions/blob/master/Mission310Solutions.ipynb). \n",
+    "* [freeCodeCamp](https://www.freecodecamp.org/) is a free e-learning platform that offers courses on web development. Because they run a popular Medium publication (over 400,000 followers), their survey attracted new coders with varying interests (not only web development), which is ideal for the purpose of our analysis.\n",
     "\n",
-    "The survey data is publicly available in this [GitHub repository](https://github.com/freeCodeCamp/2017-new-coder-survey). Below, we'll do a quick exploration of the 2017-fCC-New-Coders-Survey-Data.csv file stored in the clean-data folder of the repository we just mentioned. We'll read in the file using the direct link [here](https://raw.githubusercontent.com/freeCodeCamp/2017-new-coder-survey/master/clean-data/2017-fCC-New-Coders-Survey-Data.csv)."
+    "The survey data is publicly available in this [GitHub repository](https://github.com/freeCodeCamp/2017-new-coder-survey). Below, we'll do a quick exploration of the **2017-fCC-New-Coders-Survey-Data.csv file** stored in the clean-data folder of the repository we just mentioned. \n",
+    "* We'll read in the file using the direct link [here](https://raw.githubusercontent.com/freeCodeCamp/2017-new-coder-survey/master/clean-data/2017-fCC-New-Coders-Survey-Data.csv)."
    ]
   },
   {
@@ -1213,7 +1218,8 @@
     "* What locations have the greatest densities of new coders.\n",
     "* How much money they're willing to spend on learning. \n",
     "\n",
-    "So we first need to clarify whether the data set has the right categories of people for our purpose. The JobRoleInterest column describes for every participant the role(s) they'd be interested in working in. If a participant is interested in working in a certain domain, it means that they're also interested in learning about that domain. So let's take a look at the frequency distribution table of this column and determine whether the data we have is relevant."
+    "So we first need to clarify whether the data set has the right categories of people for our purpose. The `JobRoleInterest` column describes for every participant the role(s) they'd be interested in working in. \n",
+    "* If a participant is interested in working in a certain domain, it means that they're also interested in learning about that domain. So let's take a look at the frequency distribution table of this column and determine whether the data we have is relevant."
    ]
   },
   {
@@ -1294,7 +1300,7 @@
     }
    ],
    "source": [
-    "# # Frequency distribution table for 'JobRoleInterest'\n",
+    "# Frequency distribution table for 'JobRoleInterest'\n",
     "fcc['JobRoleInterest'].value_counts(normalize = True)"
    ]
   },
@@ -1438,7 +1444,8 @@
    "source": [
     "Because the data set provides information at a country level, we can think of each country as an individual market. This means we can frame our goal as finding the two best countries to advertise in.\n",
     "\n",
-    "One indicator of a good market is the number of potential customers — the more potential customers in a market, the better. If our ads manage to convince 10% of the 5000 potential customers in market A to buy our product, then this is better than convincing 100% of the 30 potential customers in market B."
+    "One indicator of a good market is the number of potential customers — the more potential customers in a market, the better. \n",
+    "* If our ads manage to convince 10% of the 5000 potential customers in market **A** to buy our product, then this is better than convincing 100% of the 30 potential customers in market **B**."
    ]
   },
   {
@@ -1857,6 +1864,7 @@
    "source": [
     "# Isolate the participants that answered what role they'd be interested in\n",
     "fcc_good = fcc[fcc['JobRoleInterest'].notnull()].copy()\n",
+    "\n",
     "# Frequency tables with absolute and relative frequencies\n",
     "absolute_frequencies = fcc_good['CountryLive'].value_counts()\n",
     "relative_frequencies = fcc_good['CountryLive'].value_counts(normalize = True)*100\n",
@@ -1870,9 +1878,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "45.7% of our potential customers are located in the US, and this definitely seems like the most interesting market. India has the second customer density, but it's just 7.7%, which is not too far from the United Kingdom (4.6%) or Canada (3.8%).\n",
+    "* 45.7% of our potential customers are located in the US, and this definitely seems like the most interesting market. \n",
+    "* India has the second customer density, but it's just 7.7%, which is not too far from the United Kingdom (4.6%) or Canada (3.8%).\n",
     "\n",
-    "This is useful information, but we need to go more in depth than this and figure out how much money people are actually willing to spend on learning. Advertising in high-density markets where most people are only willing to learn for free is extremely unlikely to be profitable for us."
+    "This is useful information, but we need to go more in depth than this and figure out how much money people are actually willing to spend on learning.\n",
+    "* Advertising in high-density markets where most people are only willing to learn for free is extremely unlikely to be profitable for us."
    ]
   },
   {
@@ -1880,13 +1890,23 @@
    "metadata": {},
    "source": [
     "# Spending Money for Learning\n",
-    "The MoneyForLearning column describes in American dollars the amount of money spent by participants from the moment they started coding until the moment they completed the survey. Our company sells subscriptions at a price of \\$59 per month, and for this reason we're interested in finding out how much money each student spends per month.\n",
     "\n",
-    "We'll narrow down our analysis to only four countries: the US, India, the United Kingdom, and Canada. We do this for two reasons:\n",
+    "The `MoneyForLearning` column describes in American dollars the amount of money spent by participants from the moment they started coding until the moment they completed the survey. \n",
+    "* Our company sells subscriptions at a price of \\$59 per month, and for this reason we're interested in finding out how much money each student spends per month.\n",
     "\n",
-    "These are the countries having the highest frequency in the frequency table above, which means we have a decent amount of data for each.\n",
-    "Our courses are written in English, and English is an official language in all these four countries. The more people know English, the better our chances to target the right people with our ads.\n",
-    "Let's start with creating a new column that describes the amount of money a student has spent per month so far. To do that, we'll need to divide the MoneyForLearning column to the MonthsProgramming column. The problem is that some students answered that they have been learning to code for 0 months (it might be that they have just started). To avoid dividing by 0, we'll replace 0 with 1 in the MonthsProgramming column."
+    "We'll narrow down our analysis to only four countries: \n",
+    "\n",
+    "* the US, \n",
+    "* India, \n",
+    "* the United Kingdom, and \n",
+    "* Canada. \n",
+    "\n",
+    "We do this for two reasons:\n",
+    "1. These are the countries having the highest frequency in the frequency table above, which means we have a decent amount of data for each.\n",
+    "2. Our courses are written in English, and English is an official language in all these four countries. The more people know English, the better our chances to target the right people with our ads.\n",
+    "\n",
+    "Let's start with creating a new column that describes the amount of money a student has spent per month so far. To do that, we'll need to divide the `MoneyForLearning` column to the `MonthsProgramming` column. \n",
+    "* The problem is that some students answered that they have been learning to code for 0 months (it might be that they have just started). To avoid dividing by 0, we'll replace 0 with 1 in the `MonthsProgramming` column."
    ]
   },
   {
@@ -1928,7 +1948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Keep only the rows with non-nulls in the `money_per_month` column \n",
+    "# Keep only the rows with non-nulls in the `money_per_month` column \n",
     "fcc_good = fcc_good[fcc_good['money_per_month'].notnull()]"
    ]
   },
@@ -1936,7 +1956,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to group the data by country, and then measure the average amount of money that students spend per month in each country. First, let's remove the rows having null values for the CountryLive column, and check out if we still have enough data for the four countries that interest us."
+    "We want to group the data by country, and then measure the average amount of money that students spend per month in each country. \n",
+    "* First, let's remove the rows having null values for the CountryLive column, and check out if we still have enough data for the four countries that interest us."
    ]
   },
   {
@@ -2006,7 +2027,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results for the United Kingdom and Canada are a bit surprising relative to the values we see for India. If we considered a few socio-economical metrics (like GDP per capita), we'd intuitively expect people in the UK and Canada to spend more on learning than people in India.\n",
+    "The results for the United Kingdom and Canada are a bit surprising relative to the values we see for India. \n",
+    "* If we considered a few socio-economical metrics (like GDP per capita), we'd intuitively expect people in the UK and Canada to spend more on learning than people in India.\n",
     "\n",
     "It might be that we don't have have enough representative data for the United Kingdom and Canada, or we have some outliers (maybe coming from wrong survey answers) making the mean too large for India, or too low for the UK and Canada. Or it might be that the results are correct."
    ]
@@ -2044,10 +2066,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's hard to see on the plot above if there's anything wrong with the data for the United Kingdom, India, or Canada, but we can see immediately that there's something really off for the US: two persons spend each month \\$50000 or more for learning. This is not impossible, but it seems extremely unlikely, so we'll remove every value that goes over \\$20,000 per month."
+    "It's hard to see on the plot above if there's anything wrong with the data for the United Kingdom, India, or Canada, but we can see immediately that there's something really off for the US: two persons spend each month `\\$50000` or more for learning. \n",
+    "\n",
+    "This is not impossible, but it seems extremely unlikely, so we'll remove every value that goes over `\\$20,000` per month."
    ]
   },
   {
@@ -2131,7 +2155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see a few extreme outliers for India (values over \\$2500 per month), but it's unclear whether this is good data or not. Maybe these persons attended several bootcamps, which tend to be very expensive. Let's examine these two data points to see if we can find anything relevant."
+    "We can see a few extreme outliers for India (values over `\\$2500` per month), but it's unclear whether this is good data or not. Maybe these persons attended several bootcamps, which tend to be very expensive. Let's examine these two data points to see if we can find anything relevant."
    ]
   },
   {
@@ -6405,17 +6429,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obviously, one country we should advertise in is the US. Lots of new coders live there and they are willing to pay a good amount of money each month (roughly \\$143).\n",
+    "Obviously, one country we should advertise in is the US. Lots of new coders live there and they are willing to pay a good amount of money each month (roughly `\\$143`).\n",
     "\n",
-    "We sell subscriptions at a price of \\$59 per month, and Canada seems to be the best second choice because people there are willing to pay roughly \\$93 per month, compared to India (\\$66) and the United Kingdom (\\$45).\n",
+    "We sell subscriptions at a price of `\\$59` per month, and Canada seems to be the best second choice because people there are willing to pay roughly `\\$93` per month, compared to India (`\\$66`) and the United Kingdom (`\\$45`).\n",
     "\n",
     "The data suggests strongly that we shouldn't advertise in the UK, but let's take a second look at India before deciding to choose Canada as our second best choice:\n",
-    "\n",
-    "$59 doesn't seem like an expensive sum for people in India since they spend on average \\$66 each month.\n",
-    "We have almost twice as more potential customers in India than we have in Canada:"
+    "* `$59` doesn't seem like an expensive sum for people in India since they spend on average `\\$66` each month.\n",
+    "* We have almost twice as more potential customers in India than we have in Canada:"
    ]
   },
   {
@@ -6499,7 +6522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
